--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "eslint-config-react": "^1.1.7",
     "prettier": "^2.4.1"
   },
   "keywords": [
