--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@emotion/react": "^11.5.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -38,7 +39,6 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "eslint-config-react": "^1.1.7",
     "prettier": "^2.4.1"
   },
   "keywords": [
