Add promotional backend feature

--- a/backend/api/category/models/category.settings.json
+++ b/backend/api/category/models/category.settings.json
@@ -27,8 +27,8 @@
       "required": false
     },
     "products": {
-      "collection": "product",
-      "via": "category"
+      "via": "category",
+      "collection": "product"
     }
   }
 }
