--- a/backend/api/product/models/product.settings.json
+++ b/backend/api/product/models/product.settings.json
@@ -32,6 +32,9 @@
     "category": {
       "via": "products",
       "model": "category"
+    },
+    "promo": {
+      "type": "boolean"
     }
   }
 }
