Add variants of products

--- a/backend/api/variant/models/variant.settings.json
+++ b/backend/api/variant/models/variant.settings.json
@@ -44,6 +44,16 @@
     "product": {
       "via": "variants",
       "model": "product"
+    },
+    "colorLabel": {
+      "type": "enumeration",
+      "enum": [
+        "black",
+        "white",
+        "red",
+        "green",
+        "tan"
+      ]
     }
   }
 }
