--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.17",
     "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/lab": "^4.0.0-alpha.60",
