Add signup, login, logout functionality  and use feedback context

--- a/backend/api/contact/models/contact.settings.json
+++ b/backend/api/contact/models/contact.settings.json
@@ -27,7 +27,8 @@
     "message": {
       "type": "text",
       "required": true,
-      "minLength": 8
+      "minLength": 8,
+      "unique": true
     }
   }
 }
