--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-imask": "^6.2.2",
     "react-lottie": "^1.2.3",
     "react-resize-aware": "^3.1.1",
     "react-spring": "^9.3.0",
